--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.31",
-    "com.unity.render-pipelines.core": "17.0.3",
-    "com.unity.shadergraph": "17.0.3",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.render-pipelines.core": "17.1.0",
+    "com.unity.shadergraph": "17.1.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
